--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-color: #fcf8ef;
+  background-color: #fdf2e9;
   font-family: 'Lato', sans-serif;
   position: relative;
   height: 100vh;
@@ -49,12 +49,13 @@ body {
 }
 
 .question_container {
-  width: 80vw;
+  max-width: 50vw;
   background-color: #fff;
   margin: 4.8rem auto;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 4.8rem 0 4.8rem 0;
   border-radius: 25px;
   text-align: center;
+  box-shadow: 0 2.4rem 4.8rem 0 rgba(0, 0, 0, 0.15);
 }
 
 .question_text {
@@ -67,7 +68,7 @@ body {
   font-size: 2rem;
   color: #ff8c0e;
   text-transform: uppercase;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1rem;
   letter-spacing: 1px;
 }
 
@@ -84,15 +85,18 @@ body {
   flex-direction: column;
   gap: 2rem;
   text-align: left;
-  margin-bottom: 4.8rem;
+  margin-bottom: 6.4rem;
 }
 
 .option {
   background-color: #f2f2f2;
-  padding: 10px;
+  padding: 16px;
   color: #2a2c3e;
   font-size: 1.8rem;
   border-radius: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 .btn--form {
