--- a/frontend/src/css/table_style.css
+++ b/frontend/src/css/table_style.css
@@ -1,5 +1,4 @@
 table {
-  margin-top: -4.8rem;
   width: 100%;
   font-size: 1.8rem;
   margin-bottom: 2rem;
@@ -7,13 +6,12 @@ table {
 
 th,
 td {
-  /* border: 1px solid #343a40; */
   padding: 16px 24px;
   text-align: left;
 }
 
 thead tr {
-  background-color: #087f5b;
+  background-color: var(--brand-color-primary);
   color: #fff;
 }
 
@@ -22,9 +20,9 @@ thead th {
 }
 
 tbody tr:nth-child(odd) {
-  background-color: #f8f9fa;
+  background-color: var(--btn-background-secondary);
 }
 
 tbody tr:nth-child(even) {
-  background-color: #e9ecef;
+  background-color: var(--btn-background-secondary-hover);
 }
